--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,8 +3,24 @@
 @tailwind utilities;
 
 .user{
-    font-size: 30px;
+    font-size: 20px;
 }
 #nav{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+.sign-out{
+    background-color: rgb(231, 111, 68);
+    padding: 18px;
+    cursor: pointer;
+}
+#link:hover{
+    background-color: rgba(245, 245, 245, 0.212);
+}
+body{
+    background-image: url("./images/show.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+     width: 100%;
+     height: 100vh;
+}  
